--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_coupons_details_invalid.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_coupons_details_invalid.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -42,15 +42,16 @@
                 android:layout_marginTop="140dp"
                 android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardPreventCornerOverlap="false">
                 <LinearLayout
                     android:layout_marginTop="80dp"
+                    android:layout_marginBottom="60dp"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -87,7 +88,7 @@
                         android:text="描述描述描述描述描述描述描述描述描述描述"
                         android:maxLines="2"
                         android:textColor="#858585"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         />
 
 
@@ -99,58 +100,36 @@
                         android:layout_gravity="center_horizontal"
                         >
                         <TextView
+                            android:id="@+id/textview_date_type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="有效期限："
-                            android:textColor="#858585"
-                            android:textSize="16sp"
-                            />
-                        <TextView
-                            android:id="@+id/textView_coupon_exchange_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="2018.08.01"
-                            android:textColor="#858585"
-                            android:textSize="16sp"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text=" - "
-                            android:textColor="#858585"
-                            android:textSize="16sp"
+                            android:text="使用日期："
+                            android:textColor="#CC212121"
+                            android:textSize="20sp"
                             />
                         <TextView
                             android:id="@+id/textView_validity_term"
-                            android:layout_gravity="center_horizontal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2018.08.31"
-                            android:maxLines="1"
-                            android:textColor="#858585"
-                            android:textSize="16sp"
+                            android:text="2018.08.01"
+                            android:textColor="#CC212121"
+                            android:textSize="20sp"
                             />
+
                     </LinearLayout>
 
 
                     <TextView
-                        android:layout_gravity="center_horizontal"
                         android:id="@+id/textView_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="未使用"
-                        android:maxLines="1"
-                        android:textColor="#75BD47"
-                        android:textSize="28sp"
-                        />
-                    <ImageView
-                        android:id="@+id/imageview_qr"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="190dp"
-                        android:layout_height="190dp"
-                        android:contentDescription="@string/QRDescription"
-                        />
+                        android:layout_marginTop="10dp"
+                        android:maxLines="1"
+                        android:text="已使用"
+                        android:textColor="#CDB03E"
+                        android:textSize="28sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -188,99 +167,4 @@
 
     </RelativeLayout>
 
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="154dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:gravity="center"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/imageView_coupons_details"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:scaleType="fitCenter"-->
-             <!--/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/textView_coupon_business_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="15dp"-->
-            <!--android:text="星巴克"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="24sp"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/imageView_finish_business" />-->
-
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:gravity="center"-->
-        <!--android:layout_weight="1"-->
-        <!--android:orientation="vertical">-->
-        <!--<TextView-->
-            <!--android:id="@+id/textView_coupon_description"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:text="TextView"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="20sp"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/textView_coupon_exchange_date"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:text="TextView"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="20sp"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/textView_validity_term"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:text="TextView"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="20sp"-->
-            <!--/>-->
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:gravity="center"-->
-        <!--android:layout_weight="2"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/textView_hint"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:text="消费时出示该二维码即可享受该优惠"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="20sp" />-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/imageview_qr"-->
-            <!--android:layout_width="200dp"-->
-            <!--android:layout_height="200dp"-->
-            <!--android:contentDescription="@string/QRDescription"-->
-            <!--android:layout_marginTop="15dp"/>-->
-
-    <!--</LinearLayout>-->
 </LinearLayout>
