--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -4,7 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="20dp">
+    >
+
+    <!--<ImageView-->
+        <!--android:id="@+id/img_popularize"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="260dp"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/ad1" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
