--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_my_coupon.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_my_coupon.xml
@@ -6,13 +6,14 @@
     android:layout_marginHorizontal="12dp"
     android:orientation="horizontal"
     android:padding="2dp">
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         cardview:cardCornerRadius="10dp"
-        cardview:cardElevation="2dp">
+        cardview:cardElevation="5dp"
+        >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
