--- a/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
@@ -9,6 +9,14 @@
 
     </style>
 
+    <!-- 图片全屏-->
+    <style name="Theme.imgFullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <!--底部黑色，状态栏浅v黑色-->
+    </style>
+
     <!-- ToolBar菜单样式 -->
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="actionMenuTextColor">@android:color/black</item>
