--- a/APP/IOS/PointExchange/PointExchange/SignUpView.xib
+++ b/APP/IOS/PointExchange/PointExchange/SignUpView.xib
@@ -11,7 +11,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignUpView" customModule="PointExchange" customModuleProvider="target">
+            <connections>
+                <outlet property="nextBtn" destination="4tk-eC-w1V" id="Hsb-oj-by0"/>
+                <outlet property="passwordAgainField" destination="IO0-PG-omj" id="0iN-BD-Tnv"/>
+                <outlet property="passwordField" destination="Wdx-Gg-O08" id="L6i-aY-Akj"/>
+                <outlet property="phoneNumField" destination="ihh-Kq-aR5" id="F4O-i9-RnS"/>
+                <outlet property="signUpBtn" destination="TFu-vp-IEo" id="SbQ-zb-0U0"/>
+                <outlet property="vcodeBtn" destination="36g-AV-biM" id="DRl-mg-X6c"/>
+                <outlet property="vcodeField" destination="JPf-tX-E1v" id="EI6-6O-PEg"/>
+                <outlet property="view1" destination="5bo-Rv-bsL" id="ZgB-rq-Adk"/>
+                <outlet property="view2" destination="3ya-gr-y6x" id="a9J-Vo-Gef"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="5bo-Rv-bsL" userLabel="SignUp View1">
             <rect key="frame" x="0.0" y="0.0" width="375" height="522"/>
@@ -21,13 +33,13 @@
                     <rect key="frame" x="70" y="30" width="235" height="372"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBh-WI-Qm8">
-                            <rect key="frame" x="97.5" y="0.0" width="40" height="67"/>
+                            <rect key="frame" x="97.5" y="0.0" width="40" height="63.5"/>
                             <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                             <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入手机号码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="ihh-Kq-aR5" userLabel="账户">
-                            <rect key="frame" x="7" y="75" width="221" height="40"/>
+                            <rect key="frame" x="7" y="71.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="XJ6-1n-4NZ"/>
                             </constraints>
@@ -36,7 +48,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入短信验证码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="JPf-tX-E1v" userLabel="密码">
-                            <rect key="frame" x="7" y="123" width="221" height="40"/>
+                            <rect key="frame" x="7" y="119.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="ebp-D8-JXQ"/>
                             </constraints>
@@ -45,33 +57,44 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="获取验证码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaA-9y-7c4">
-                            <rect key="frame" x="82.5" y="171" width="70" height="47.5"/>
-                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
-                            <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36g-AV-biM">
+                            <rect key="frame" x="86.5" y="167.5" width="62" height="61.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <state key="normal" title="获取验证码">
+                                <color key="titleColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="0.80340325339999996" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="clickGetVCode:" destination="-1" eventType="touchUpInside" id="khb-pZ-pPw"/>
+                            </connections>
+                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4tk-eC-w1V">
-                            <rect key="frame" x="7" y="226.5" width="221" height="109.5"/>
+                            <rect key="frame" x="7" y="237" width="221" height="104"/>
                             <state key="normal" image="Button下一步"/>
+                            <connections>
+                                <action selector="clickNextBtn:" destination="-1" eventType="touchUpInside" id="sc1-xA-vbh"/>
+                            </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="sD3-57-OBV">
-                            <rect key="frame" x="39.5" y="344" width="156" height="28"/>
+                            <rect key="frame" x="38.5" y="349" width="158" height="23"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kne-H7-dJF">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="28"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="60" height="23"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VSw-CS-o9g">
-                                    <rect key="frame" x="64" y="0.0" width="28" height="28"/>
-                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
-                                    <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZq-vy-IO6">
+                                    <rect key="frame" x="64" y="0.0" width="30" height="23"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <state key="normal" title="登录">
+                                        <color key="titleColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="clickLogin:" destination="-1" eventType="touchUpInside" id="Qp1-mG-84D"/>
+                                    </connections>
+                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XTl-QI-Yef">
-                                    <rect key="frame" x="96" y="0.0" width="60" height="28"/>
+                                    <rect key="frame" x="98" y="0.0" width="60" height="23"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -108,22 +131,22 @@
                     <rect key="frame" x="70" y="30" width="235" height="372"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42X-sE-Tk9">
-                            <rect key="frame" x="97.5" y="0.0" width="40" height="76.5"/>
+                            <rect key="frame" x="97.5" y="0.0" width="40" height="75.5"/>
                             <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                             <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="Wdx-Gg-O08" userLabel="账户">
-                            <rect key="frame" x="7" y="84.5" width="221" height="40"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="Wdx-Gg-O08">
+                            <rect key="frame" x="7" y="83.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="kZg-Xo-bYx"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请再次输入密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="IO0-PG-omj" userLabel="密码">
-                            <rect key="frame" x="7" y="132.5" width="221" height="40"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请再次输入密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="IO0-PG-omj">
+                            <rect key="frame" x="7" y="131.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="WcW-aa-y8f"/>
                             </constraints>
@@ -133,26 +156,32 @@
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFu-vp-IEo">
-                            <rect key="frame" x="7" y="180.5" width="221" height="126"/>
+                            <rect key="frame" x="7" y="179.5" width="221" height="124"/>
                             <state key="normal" image="Button注册"/>
+                            <connections>
+                                <action selector="clickSignUp:" destination="-1" eventType="touchUpInside" id="cVI-hx-7ld"/>
+                            </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="RVj-Ho-9UM">
-                            <rect key="frame" x="39.5" y="314.5" width="156" height="57.5"/>
+                            <rect key="frame" x="38" y="311.5" width="159" height="60.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tyz-O2-dPr">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="57.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="60" height="60.5"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLV-RQ-y1u">
-                                    <rect key="frame" x="64" y="0.0" width="28" height="57.5"/>
-                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
-                                    <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMk-sr-UhG">
+                                    <rect key="frame" x="64" y="0.0" width="31" height="60.5"/>
+                                    <state key="normal" title="登录">
+                                        <color key="titleColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="0.80340325339999996" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="clickLogin:" destination="-1" eventType="touchUpInside" id="9UO-WQ-1zw"/>
+                                    </connections>
+                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TzP-hJ-4cd">
-                                    <rect key="frame" x="96" y="0.0" width="60" height="57.5"/>
+                                    <rect key="frame" x="99" y="0.0" width="60" height="60.5"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
